--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "apollo-server-express": "^3.11.1",
+    "bcrypt": "^5.1.0",
     "graphql": "^15.8.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
